--- a/home.html
+++ b/home.html
@@ -26,7 +26,7 @@
                 <li><a href="#">Item 4</a></li>
                 <li><a href="#">Item 5</a></li>
             </ul>
-        <p></p>
+        <p> dit hoor ik niet te zien</p>
 
     </body>
 
