--- a/index4.html
+++ b/index4.html
@@ -18,7 +18,7 @@
 
         <nav>
             <ul>
-                <li><a href="home.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="index3.html">Plaatje</a></li>
                 <li><a href="index4.html">Tekst</a></li>
                 <li><a href="#">Item 4</a></li>
