--- a/index3.html
+++ b/index3.html
@@ -30,6 +30,12 @@
         </div>
         <img class="logo" src="images/dna.jpg" alt="An image of a DNA string">
 
+        <div class="lower info">
+            <p> info</p>
+
+        </div>
+
+
     </body>
 
 </html>
