--- a/index3.html
+++ b/index3.html
@@ -30,7 +30,7 @@
         </div>
         <img class="logo" src="images/dna.jpg" alt="An image of a DNA string">
 
-        <div class="lower info">
+        <div class="lower-info">
             
             <p> info help</p>
 
