added changes, bottom feed

--- a/index3.html
+++ b/index3.html
@@ -25,15 +25,30 @@
             </ul>
         </nav>
 
-        <div div style="width: 100vw; height: 250px; border: 5px outset green">
-           <img class="bannerimage" src="images/dna.jpg" alt="An image of a DNA string" width="100vw">
+
+        <div style="width: 100vw; height: max(100px, calc( 100vh - 443px ));">
+           
+            <div div style="width: 100vw; height: 250px;">
+                <img class="bannerimage" src="images/dna.jpg" alt="An image of a DNA string" width="100vw">
+             </div>
+             <img class="logo" src="images/dna.jpg" alt="An image of a DNA string">
         </div>
-        <img class="logo" src="images/dna.jpg" alt="An image of a DNA string">
 
-        <div class="lower-info">
-            
-            <p> info help</p>
+        <div class="info-lower">
+            <div class="info-lower-leftbox">
+                <p class="info-lower-text"> About us </p>
+                <p class="info-lower-text"> MDF Consulting is your partner for consult needs in bio informatics.</p>
+            </div>
 
+            <div class="info-lower-rightbox">
+                <p class="info-lower-text"> MDFConsulting</p>
+
+                <ul>
+                    <li class="info-lower-text">Boskoop, The Netherlands</li>
+                    <li class="info-lower-text">+31 6 1234 9876</li>
+                    <li class="info-lower-text">MDFConsulting@gmail.com</li>
+                </ul>
+            </div>
         </div>
 
 
