--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 
     <body>
 
-        <h1 class="mainheader"> MDF Consulting</h1>
+        <div style="background-color: lightblue; height: 140px; width: 100vw; position: relative; top: 0px;">
+            <h1 class="mainheader"> MDF Consulting</h1>
+        </div>    
 
         <img class="logo" src="images/dna.jpg" alt="An image of a DNA string">
 
@@ -26,7 +28,29 @@
                 <li><a href="#">Item 4</a></li>
                 <li><a href="#">Item 5</a></li>
             </ul>
-        <p> dit hoor ik niet te zien</p>
+        </nav>
+
+        <div style="width: 100vw; height: max(100px, calc( 100vh - 415px )); border: 5px solid red;">
+            <p>hey</p>
+        </div>
+
+
+        <div class="info-lower">
+            <div class="info-lower-leftbox">
+                <p class="info-lower-text"> About us </p>
+                <p class="info-lower-text"> MDF Consulting is your partner for consult needs in bio informatics.</p>
+            </div>
+
+            <div class="info-lower-rightbox">
+                <p class="info-lower-text"> MDFConsulting</p>
+
+                <ul>
+                    <li class="info-lower-text">Boskoop, The Netherlands</li>
+                    <li class="info-lower-text">+31 6 1234 9876</li>
+                    <li class="info-lower-text">MDFConsulting@gmail.com</li>
+                </ul>
+            </div>
+        </div>
 
     </body>
 
