--- a/index4.html
+++ b/index4.html
@@ -14,17 +14,26 @@
 
     <body>
 
-        <h1 class="mainheader"> MDF Consulting</h1>
+        <div style="background-color: white; height: 140px; width: 100vw; position: relative; top: 0px; border: 5px solid red;">
+            <h1 class="mainheader"> 
+                <a href="index.html"> MDF
+                    Consulting </a>
+            </h1>
 
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="index3.html">Plaatje</a></li>
-                <li><a href="index4.html">Tekst</a></li>
-                <li><a href="#">Item 4</a></li>
-                <li><a href="#">Item 5</a></li>
-            </ul>
-        </nav>
+            <a href="https://www.linkedin.com">
+                <img class="logo" src="images/linkedin.jpg" alt="Linkedin Logo">
+            </a>
+
+            <nav>
+                <ul>
+                    <li><a href="index.html">Expertises</a></li>
+                    <li><a href="index3.html">Services</a></li>
+                    <li><a href="index4.html">Company</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </nav>
+        </div>    
+
 
     <div style="width: 98.6vw; border: 5px outset green">
 
