--- a/index4.html
+++ b/index4.html
@@ -29,7 +29,12 @@
                     <li><a href="index.html">Expertises</a></li>
                     <li><a href="index3.html">Services</a></li>
                     <li><a href="index4.html">Company</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="#">Contact</a>
+                        <ul>
+                            <li><a href="#">Linkedin</a></li>
+                            <li><a href="#">Adress</a></li>
+                        </ul>
+                    </li>
                 </ul>
             </nav>
         </div>    
