--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     Consulting
                 </h1>
   
-                <nav class="header-nav">
+                <nav class="header-nav"> /*Desktop nav bar */
                     <ul>
                         <li><a href="index.html">Expertises</a>
                             <ul>
@@ -40,7 +40,12 @@
                         </li>
                     </ul>
                 </nav>
-                <p>Hello Hello</p>
+
+                <div class="hamburger"> /*Mobile nav bar */
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                </div>
             </div>
         </header>     
         
@@ -82,3 +87,4 @@
 
     </body>
 </html>
+
