--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     Consulting
                 </h1>
   
-                <nav class="header-nav"> /*Desktop nav bar */
+                <nav class="header-nav">
                     <ul>
                         <li><a href="index.html">Expertises</a>
                             <ul>
@@ -41,7 +41,7 @@
                     </ul>
                 </nav>
 
-                <div class="hamburger"> /*Mobile nav bar */
+                <div class="hamburger">
                     <span class="bar"></span>
                     <span class="bar"></span>
                     <span class="bar"></span>
