--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <title>Wrapper test</title>
 
         <link rel="stylesheet" href="mystyle.css">
+        <script src="script.js"></script>
 
     </head>
 
