check if hamburger menu works on phone

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <title>Wrapper test</title>
 
         <link rel="stylesheet" href="mystyle.css">
-        <script src="script.js"></script>
+
 
     </head>
 
@@ -22,7 +22,7 @@
                 </h1>
   
                 <nav class="header-nav">
-                    <ul>
+                    <ul class="nav-menu">
                         <li><a href="index.html">Expertises</a>
                             <ul>
                                 <li><a href="#">- Viral Vaccines</a></li>
@@ -41,7 +41,6 @@
                         </li>
                     </ul>
                 </nav>
-
                 <div class="hamburger">
                     <span class="bar"></span>
                     <span class="bar"></span>
@@ -49,7 +48,7 @@
                 </div>
             </div>
         </header>     
-        
+        <script src="script.js"></script>
 
         <img class="banner-image" src="images/banner3.jpg" alt="A large image">
 
