--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
                 </h1>
   
                 <nav class="header-nav">
-                    <ul class="nav-menu">
-                        <li><a href="index.html">Expertises</a>
+                    <ul class="nav-menu-desktop">
+                        <li><a href="index.html" class="nav-link">Expertises</a>
                             <ul>
                                 <li><a href="#">- Viral Vaccines</a></li>
                                 <li><a href="#">- Gen Therapy</a></li>
@@ -31,14 +31,37 @@
                                 <li><a href="#">- Enzymes & Biosimilars</a></li>
                             </ul>
                         </li>
-                        <li><a href="index3.html">Services</a></li>
-                        <li><a href="index4.html">Company</a></li>
-                        <li><a href="#">Contact</a>
+                        <li><a href="index3.html" class="nav-link">Services</a></li>
+                        <li><a href="index4.html" class="nav-link">Company</a></li>
+                        <li><a href="#" class="nav-link">Contact</a>
                             <ul>
                                 <li><a href="#">Linkedin</a></li>
                                 <li><a href="#">Adress</a></li>
                             </ul>
                         </li>
+                    </ul>
+
+                    <ul class="nav-menu-mobile">
+                        <div class="nav-submenu-mobile">
+                            <li class="nav-submenu-mobile-li">Exxxpertises  <b>△</b>
+                                <ul class="nav-submenu-list-mobile">
+                                    <li><a href="#">- Viral Vaccines</a></li>
+                                    <li><a href="#">- Gen Therapy</a></li>
+                                    <li><a href="#">- Therapeutic proteins</a></li>
+                                    <li><a href="#">- Enzymes & Biosimilars</a></li>
+                                </ul>
+                            </li>
+                        </div>
+                        <li><a href="index3.html">Services</a></li>
+                        <li><a href="index4.html">Company</a></li>
+                        <div class="nav-submenu-mobile">
+                            <li class="nav-submenu-mobile-li"><a href="#">Contact</a>
+                                <ul class="nav-submenu-list-mobile">
+                                    <li><a href="#">Linkedin</a></li>
+                                    <li><a href="#">Adress</a></li>
+                                </ul>
+                            </li>
+                        </div>
                     </ul>
                 </nav>
                 <div class="hamburger">
