--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
                     <ul class="nav-menu-mobile">
                         <div class="nav-submenu-mobile">
-                            <li class="nav-submenu-mobile-li">Exxxpertises  <b>△</b>
+                            <li class="nav-submenu-mobile-li">Expertises  <b>△</b>
                                 <ul class="nav-submenu-list-mobile">
                                     <li><a href="#">- Viral Vaccines</a></li>
                                     <li><a href="#">- Gen Therapy</a></li>
