test if links in submenu work

--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
                     <ul class="nav-menu-desktop">
                         <li><a href="index.html" class="nav-link">Expertises</a>
                             <ul>
-                                <li><a href="#">- Viral Vaccines</a></li>
-                                <li><a href="#">- Gen Therapy</a></li>
-                                <li><a href="#">- Therapeutic proteins</a></li>
-                                <li><a href="#">- Enzymes & Biosimilars</a></li>
+                                <li><a href="x.html">- Viral Vaccines</a></li>
+                                <li><a href="x.html">- Gen Therapy</a></li>
+                                <li><a href="x.html">- Therapeutic proteins</a></li>
+                                <li><a href="x.html">- Enzymes & Biosimilars</a></li>
                             </ul>
                         </li>
                         <li><a href="index3.html" class="nav-link">Services</a></li>
