check if test is uploaded

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   
                 <nav class="header-nav">
                     <ul class="nav-menu-desktop">
-                        <li><a href="index.html" class="nav-link">Expertises</a>
+                        <li><a href="index.html" class="nav-link">Exxpertises</a>
                             <ul>
                                 <li><a href="x.html">- Viral Vaccines</a></li>
                                 <li><a href="x.html">- Gen Therapy</a></li>
