--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   
                 <nav class="header-nav">
                     <ul class="nav-menu-desktop">
-                        <li><a href="index.html" class="nav-link">Exxpertises</a>
+                        <li><a href="index.html" class="nav-link">Exxxpertises</a>
                             <ul>
                                 <li><a href="x.html">- Viral Vaccines</a></li>
                                 <li><a href="x.html">- Gen Therapy</a></li>
@@ -45,10 +45,10 @@
                         <div class="nav-submenu-mobile">
                             <li class="nav-submenu-mobile-li">Expertises  <b>△</b>
                                 <ul class="nav-submenu-list-mobile">
-                                    <li><a href="#">- Viral Vaccines</a></li>
-                                    <li><a href="#">- Gen Therapy</a></li>
-                                    <li><a href="#">- Therapeutic proteins</a></li>
-                                    <li><a href="#">- Enzymes & Biosimilars</a></li>
+                                    <li><a href="x.html">- Viral Vaccines</a></li>
+                                    <li><a href="x.html">- Gen Therapy</a></li>
+                                    <li><a href="x.html">- Therapeutic proteins</a></li>
+                                    <li><a href="x.html">- Enzymes & Biosimilars</a></li>
                                 </ul>
                             </li>
                         </div>
