fixed layout menu mobile

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
                     <ul class="nav-menu-mobile">
                         <div class="nav-submenu-mobile">
-                            <li class="nav-submenu-mobile-li">Exxpertises  <b>△</b>
+                            <li class="nav-submenu-mobile-li">&nbsp &nbsp &nbsp Exxpertises  <b>△</b>
                                 <ul class="nav-submenu-list-mobile">
                                     <li><a href="x.html">- Viral Vaccines</a></li>
                                     <li><a href="x.html">- Gen Therapy</a></li>
@@ -52,10 +52,10 @@
                                 </ul>
                             </li>
                         </div>
-                        <li><a href="index3.html">Services</a></li>
-                        <li><a href="index4.html">Company</a></li>
+                        <li>&nbsp &nbsp &nbsp Services</li>
+                        <li>&nbsp &nbsp &nbsp Company</li>
                         <div class="nav-submenu-mobile">
-                            <li class="nav-submenu-mobile-li"><a href="#">Contact</a>
+                            <li class="nav-submenu-mobile-li">&nbsp &nbsp &nbsp Contact
                                 <ul class="nav-submenu-list-mobile">
                                     <li><a href="#">Linkedin</a></li>
                                     <li><a href="#">Adress</a></li>
