added all functionalities to mobile navigation bar

--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
                     </ul>
 
                     <ul class="nav-menu-mobile">
-                        <div class="nav-submenu-mobile">
+                        <div id="nav-submenu-mobile1" class="nav-submenu-mobile">
                             <li class="nav-submenu-mobile-li">&nbsp &nbsp &nbsp Exxpertises  <b>△</b>
-                                <ul class="nav-submenu-list-mobile">
+                                <ul id="nav-submenu-list-mobile1" class="nav-submenu-list-mobile">
                                     <li><a href="x.html">- Viral Vaccines</a></li>
                                     <li><a href="x.html">- Gen Therapy</a></li>
                                     <li><a href="x.html">- Therapeutic proteins</a></li>
@@ -52,11 +52,23 @@
                                 </ul>
                             </li>
                         </div>
-                        <li>&nbsp &nbsp &nbsp Services</li>
-                        <li>&nbsp &nbsp &nbsp Company</li>
-                        <div class="nav-submenu-mobile">
+                        <div id="nav-submenu-mobile2" class="nav-submenu-mobile">
+                            <li class="nav-submenu-mobile-li">&nbsp &nbsp &nbsp Services
+                                <ul id="nav-submenu-list-mobile2" class="nav-submenu-list-mobile">
+                                    <li><a href="x.html">- Placeholder</a></li>
+                                </ul>
+                            </li>
+                        </div>
+                        <div id="nav-submenu-mobile3" class="nav-submenu-mobile">
+                            <li class="nav-submenu-mobile-li">&nbsp &nbsp &nbsp Company
+                                <ul id="nav-submenu-list-mobile3" class="nav-submenu-list-mobile">
+                                    <li><a href="x.html">- Placeholder</a></li>
+                                </ul>
+                            </li>
+                        </div>
+                        <div id=nav-submenu-mobile4 class="nav-submenu-mobile">
                             <li class="nav-submenu-mobile-li">&nbsp &nbsp &nbsp Contact
-                                <ul class="nav-submenu-list-mobile">
+                                <ul id="nav-submenu-list-mobile4" class="nav-submenu-list-mobile">
                                     <li><a href="#">Linkedin</a></li>
                                     <li><a href="#">Adress</a></li>
                                 </ul>
