correct spelling in navbar

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   
                 <nav class="header-nav">
                     <ul class="nav-menu-desktop">
-                        <li><a href="index.html" class="nav-link">Exxxpertises</a>
+                        <li><a href="index.html" class="nav-link">Expertises</a>
                             <ul>
                                 <li><a href="x.html">- Viral Vaccines</a></li>
                                 <li><a href="x.html">- Gen Therapy</a></li>
@@ -43,7 +43,7 @@
 
                     <ul class="nav-menu-mobile">
                         <div id="nav-submenu-mobile1" class="nav-submenu-mobile">
-                            <li class="nav-submenu-mobile-li">&nbsp &nbsp &nbsp Exxpertises  <b>△</b>
+                            <li class="nav-submenu-mobile-li">&nbsp &nbsp &nbsp Expertises  <b>△</b>
                                 <ul id="nav-submenu-list-mobile1" class="nav-submenu-list-mobile">
                                     <li><a href="x.html">- Viral Vaccines</a></li>
                                     <li><a href="x.html">- Gen Therapy</a></li>
