added links to expertises

--- a/biosimilars.html
+++ b/biosimilars.html
@@ -101,14 +101,7 @@
 
             <h2 class="main-h2">Expertise-driven Biotechnology consulting</h2>
 
-            <p>In need of help in sustaining your business processing in the ever-changing field of Biotechnology? 
-                MDFConsulting has the right expertise to support, accelerate and innovate your processes.
-            </p>
-            <p> With over 25 years experience in consulting and providing project-based support across multiple muntinational companies, MDFConsulting is the right choice to help you!
-                Need advice? Make contact so we can figure out your needs and how we can support you! 
-            </p>
-
-            <h3 class="main-h3">Products and services</h3>
+            <p>under construction biosimilars</p>
 
 
         </div>
