--- a/therapeuticproteins.html
+++ b/therapeuticproteins.html
@@ -95,20 +95,15 @@
         </header>  
         <script src="script.js"></script>
 
+
+
         <img class="banner-image" src="images/banner3.jpg" alt="A large image">
 
         <div class="wrapper-main">
 
             <h2 class="main-h2">Expertise-driven Biotechnology consulting</h2>
 
-            <p>In need of help in sustaining your business processing in the ever-changing field of Biotechnology? 
-                MDFConsulting has the right expertise to support, accelerate and innovate your processes.
-            </p>
-            <p> With over 25 years experience in consulting and providing project-based support across multiple muntinational companies, MDFConsulting is the right choice to help you!
-                Need advice? Make contact so we can figure out your needs and how we can support you! 
-            </p>
-
-            <h3 class="main-h3">Products and services</h3>
+            <p>under construction therapeutic proteins</p>
 
 
         </div>
