--- a/biosimilars.html
+++ b/biosimilars.html
@@ -31,7 +31,7 @@
                                 <li><a href="biosimilars.html">- Enzymes & Biosimilars</a></li>
                             </ul>
                         </li>
-                        <li>Services
+                        <li><a href="index.html" class="nav-link">Services</a>
                             <ul>
                                 <li><a href="projectbased.html">- Project Based</a></li>
                                 <li><a href="consultancy.html">- Consultancy</a></li>
