few style changes to header

--- a/biosimilars.html
+++ b/biosimilars.html
@@ -17,8 +17,8 @@
 
         <header>
             <div class="wrapper-header">
-                <h1 class="header-h1">MDF
-                    Consulting
+                <h1 class="header-h1"><a href="index.html"> MDF
+                    Consulting </a>
                 </h1>
   
                 <nav class="header-nav">
@@ -95,14 +95,20 @@
         </header>  
         <script src="script.js"></script>
 
-        <img class="banner-image" src="images/banner3.jpg" alt="A large image">
+        <img class="banner-image" src="images/banner4.jpg" alt="A large image">
 
         <div class="wrapper-main">
 
             <h2 class="main-h2">Expertise-driven Biotechnology consulting</h2>
 
-            <p>under construction biosimilars</p>
+            <h3 class="main-h3"> Biosimilars</h3>
 
+            <p>Biosimilars represent an innovative approach to expanding access to biologic therapies. At MDFConsulting, we specialize
+                in navigating the complex landscape of biosimilar development. Our expertise encompasses every stage of the process, 
+                from initial comparative analytical studies to regulatory approval. By leveraging our experience and strategic 
+                insights, we help clients optimize development pathways, ensuring that biosimilars meet rigorous standards for safety,
+                efficacy, and quality. Partner with us to capitalize on the opportunities presented by biosimilars and contribute
+                to making high-quality biologic therapies more accessible to patients worldwide. </p>
 
         </div>
 
