--- a/gentherapy.html
+++ b/gentherapy.html
@@ -101,7 +101,15 @@
 
             <h2 class="main-h2">Expertise-driven Biotechnology consulting</h2>
 
-            <p>under construction gen therapy</p>
+            <h3 class="main-h3">Gen Therapy</h3>
+
+            <p> At MDFConsulting, we specialize in pioneering gene therapy solutions for genetic disorders such as ALS, Huntington's
+                disease, and hemophilia B. Our expertise extends to groundbreaking treatments like Glybera, the first approved gene
+                therapy in Europe for familial lipoprotein lipase deficiency. Focused on targeting underlying genetic mutations,
+                our therapies aim to provide tangible improvements in patient outcomes. Whether it's enhancing motor neuron function
+                in ALS, modifying disease progression in Huntington's, or restoring clotting factor production in hemophilia B,
+                we're committed to advancing gene therapy research. Partner with us to translate cutting-edge science into 
+                transformative treatments and improve the lives of patients worldwide. </p>
 
 
         </div>
