--- a/index.html
+++ b/index.html
@@ -17,9 +17,7 @@
 
         <header>
             <div class="wrapper-header">
-                <h1 class="header-h1">MDF
-                    Consulting
-                </h1>
+                <h1 class="header-h1">MDF <br> Consulting</h1>
   
                 <nav class="header-nav">
                     <ul class="nav-menu-desktop">
@@ -95,7 +93,7 @@
         </header>  
         <script src="script.js"></script>
 
-        <img class="banner-image" src="images/banner3.jpg" alt="A large image">
+        <img class="banner-image" src="images/banner5.jpg" alt="A large image">
 
         <div class="wrapper-main">
 
@@ -124,9 +122,6 @@
 
             <h3 class="main-h3"> Meet our experts</h3>     
             <p> Contact us today to learn more about how we can help you achieve your goals in the exciting field of biotechnology. </p>
-
-            
-
 
         </div>
 
