--- a/therapeuticproteins.html
+++ b/therapeuticproteins.html
@@ -103,8 +103,16 @@
 
             <h2 class="main-h2">Expertise-driven Biotechnology consulting</h2>
 
-            <p>under construction therapeutic proteins</p>
+            <h3 class="main-h3">Therapeutic Proteins</h3>
 
+            <p> Specializing in the development of therapeutic proteins, we at MDFConsulting leverage cutting-edge techniques to 
+                engineer proteins that address various medical needs. Whether it's designing monoclonal antibodies for cancer therapy,
+                optimizing enzyme replacement therapies for metabolic disorders, or engineering cytokines for immunotherapy, our
+                expertise covers a wide range of therapeutic applications. With a focus on precision and efficacy, we collaborate 
+                closely with clients to navigate the complexities of protein engineering, from target identification and optimization
+                to preclinical testing and regulatory approval. Partner with us to accelerate the development of novel therapeutic
+                proteins and bring innovative treatments to patients in need. </p>
+            
 
         </div>
 
