--- a/viralvaccins.html
+++ b/viralvaccins.html
@@ -101,8 +101,18 @@
 
             <h2 class="main-h2">Expertise-driven Biotechnology consulting</h2>
 
-            <p>under construction viral vaccins</p>
+            <h3 class="main-h3">Viral Vaccin Development</h3>
 
+            <p>At MDFConsulting we specialize in optimizing and scaling up vaccine production processes to combat infectious diseases 
+            like COVID-19, Nipah virus (NiV), and Lassa fever virus (LASV). With expertise in bioprocess engineering, regulatory 
+            compliance, and technology transfer, we empower clients to accelerate the development and manufacturing of life-saving 
+            vaccines.</p>
+
+            <p>Our expertise spans a wide array of viral pathogens, including high-profile examples such as COVID-19, Nipah virus (NiV),
+            and Lassa fever virus (LASV). For COVID-19, we contributed to the rapid development and scale-up of mRNA-based 
+            vaccine candidates, leveraging innovative approaches to meet the urgent global demand. Similarly, our work on NiV and 
+            LASV involved streamlining production processes and overcoming challenges associated with these emerging infectious
+            diseases.</p>
 
         </div>
 
