changes to footnote

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         </header>  
         <script src="script.js"></script>
 
-        <img class="banner-image" src="images/banner5.jpg" alt="A large image">
+        <img class="banner-image-index" src="images/banner5.jpg" alt="A large image">
 
         <div class="wrapper-main">
 
