added services page

--- a/index.html
+++ b/index.html
@@ -18,12 +18,14 @@
         <header>
             <div class="wrapper-header">
                 <h1 class="header-h1">
-                    <img class="logo" src="images/logo.jpg" alt="Logo of MDF Consulting">
+                    <a href="index.html">
+                        <img class="logo" src="images/logo.jpg" alt="Logo of MDF Consulting">
+                    </a>
                 </h1>
   
                 <nav class="header-nav">
                     <ul class="nav-menu-desktop">
-                        <li><a href="index.html" class="nav-link">Expertises</a>
+                        <li><a href="expertises.html" class="nav-link">Expertises</a>
                             <ul>
                                 <li><a href="viralvaccins.html">- Viral Vaccines</a></li>
                                 <li><a href="gentherapy.html">- Gen Therapy</a></li>
