--- a/services.html
+++ b/services.html
@@ -52,7 +52,7 @@
 
                     <ul class="nav-menu-mobile">
                         <div id="nav-submenu-mobile1" class="nav-submenu-mobile">
-                            <li class="nav-submenu-mobile-li">&nbsp &nbsp &nbsp Expertises  <b>△</b>
+                            <li class="nav-submenu-mobile-li">&nbsp &nbsp &nbsp    <b>△</b>
                                 <ul id="nav-submenu-list-mobile1" class="nav-submenu-list-mobile">
                                     <li><a href="expertises.html#viralvaccins">- Viral Vaccines</a></li>
                                     <li><a href="expertises.html#gentherapy">- Gen Therapy</a></li>
@@ -103,7 +103,7 @@
 
             <h2 class="main-h2">Expertise-driven Biotechnology consulting</h2>
 
-            <h3 id="viralvaccins" class="main-h3">Viral Vaccin Development</h3>
+            <h3 id="projectbased" class="main-h3">Project based</h3>
 
             <p class="main-text">At MDFConsulting we specialize in optimizing and scaling up vaccine production processes to combat infectious diseases 
             like COVID-19, Nipah virus (NiV), and Lassa fever virus (LASV). With expertise in bioprocess engineering, regulatory 
@@ -114,7 +114,7 @@
             LASV involved streamlining production processes and overcoming challenges associated with these emerging infectious
             diseases.</p>
 
-            <h3 id="gentherapy" class="main-h3">Gen Therapy</h3>
+            <h3 id="consultancy" class="main-h3">Consultancy</h3>
 
             <p class="main-text"> At MDFConsulting, we specialize in pioneering gene therapy solutions for genetic disorders such as ALS, Huntington's
                 disease, and hemophilia B. Our expertise extends to groundbreaking treatments like Glybera, the first approved gene
@@ -125,7 +125,7 @@
                 transformative treatments and improve the lives of patients worldwide. </p>
 
 
-            <h3 id="therapeuticproteins" class="main-h3">Therapeutic Proteins</h3>
+            <h3 id="processoptimization" class="main-h3">Process optimization</h3>
 
             <p class="main-text"> Specializing in the development of therapeutic proteins, we at MDFConsulting leverage cutting-edge techniques to 
                 engineer proteins that address various medical needs. Whether it's designing monoclonal antibodies for cancer therapy,
@@ -136,7 +136,7 @@
                 proteins and bring innovative treatments to patients in need. </p>
 
                 
-            <h3 id="biosimilars" class="main-h3"> Biosimilars</h3>
+            <h3 id="trainings" class="main-h3"> Trainings</h3>
 
             <p class="main-text"> Biosimilars represent an innovative approach to expanding access to biologic therapies. At MDFConsulting, we specialize
                 in navigating the complex landscape of biosimilar development. Our expertise encompasses every stage of the process, 
