--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
                     <ul class="nav-menu-desktop">
                         <li><a href="expertises.html" class="nav-link">Expertises</a>
                             <ul>
-                                <li><a href="viralvaccins.html">- Viral Vaccines</a></li>
-                                <li><a href="gentherapy.html">- Gen Therapy</a></li>
-                                <li><a href="therapeuticproteins.html">- Therapeutic proteins</a></li>
-                                <li><a href="biosimilars.html">- Enzymes & Biosimilars</a></li>
+                                <li><a href="expertises.html#viralvaccins">- Viral Vaccines</a></li>
+                                <li><a href="expertises.html#gentherapy">- Gen Therapy</a></li>
+                                <li><a href="expertises.html#therapeuticproteins">- Therapeutic proteins</a></li>
+                                <li><a href="expertises.html#biosimilars">- Enzymes & Biosimilars</a></li>
                             </ul>
                         </li>
-                        <li><a href="index.html" class="nav-link">Services</a>
+                        <li><a href="services.html" class="nav-link">Services</a>
                             <ul>
                                 <li><a href="projectbased.html">- Project Based</a></li>
                                 <li><a href="consultancy.html">- Consultancy</a></li>
@@ -54,10 +54,10 @@
                         <div id="nav-submenu-mobile1" class="nav-submenu-mobile">
                             <li class="nav-submenu-mobile-li">&nbsp &nbsp &nbsp Expertises  <b>△</b>
                                 <ul id="nav-submenu-list-mobile1" class="nav-submenu-list-mobile">
-                                    <li><a href="viralvaccins.html">- Viral Vaccines</a></li>
-                                    <li><a href="gentherapy.html">- Gen Therapy</a></li>
-                                    <li><a href="therapeuticproteins.html">- Therapeutic proteins</a></li>
-                                    <li><a href="biosimilars.html">- Enzymes & Biosimilars</a></li>
+                                    <li><a href="expertises.html#viralvaccins">- Viral Vaccines</a></li>
+                                    <li><a href="expertises.html#gentherapy">- Gen Therapy</a></li>
+                                    <li><a href="expertises.html#therapeuticproteins">- Therapeutic proteins</a></li>
+                                    <li><a href="expertises.html#biosimilars">- Enzymes & Biosimilars</a></li>
                                 </ul>
                             </li>
                         </div>
