--- a/services.html
+++ b/services.html
@@ -97,11 +97,12 @@
         </header>  
         <script src="script.js"></script>
 
-        <img class="banner-image" src="images/banner3.jpg" alt="A large image">
+        <img class="banner-image-index" src="images/banner2.jpg" alt="A large image">
 
         <div class="wrapper-main">
 
-            <h2 class="main-h2">Expertise-driven Biotechnology consulting</h2>
+            
+            <h2 class="main-h2" style="top: 500px">Our services</h2>
 
             <h3 id="projectbased" class="main-h3">Project based</h3>
 
