added company page

--- a/company.html
+++ b/company.html
@@ -52,7 +52,7 @@
 
                     <ul class="nav-menu-mobile">
                         <div id="nav-submenu-mobile1" class="nav-submenu-mobile">
-                            <li class="nav-submenu-mobile-li">&nbsp &nbsp &nbsp    <b>△</b>
+                            <li class="nav-submenu-mobile-li">&nbsp &nbsp &nbsp Expertises  
                                 <ul id="nav-submenu-list-mobile1" class="nav-submenu-list-mobile">
                                     <li><a href="expertises.html#viralvaccins">- Viral Vaccines</a></li>
                                     <li><a href="expertises.html#gentherapy">- Gen Therapy</a></li>
@@ -97,54 +97,19 @@
         </header>  
         <script src="script.js"></script>
 
-        <img class="banner-image-index" src="images/banner2.jpg" alt="A large image">
+        <img class="banner-image-index" src="images/banner5.jpg" alt="A large image">
 
         <div class="wrapper-main">
 
-            
-            <h2 class="main-h2" style="top: 500px">Our services</h2>
+            <h2 class="main-h2" style="top: 500px">Our expertises</h2>
 
-            <h3 id="projectbased" class="main-h3">Project based</h3>
+            <h3 id="company" class="main-h3"> Company </h3>
 
-            <p class="main-text">At MDFConsulting we specialize in optimizing and scaling up vaccine production processes to combat infectious diseases 
-            like COVID-19, Nipah virus (NiV), and Lassa fever virus (LASV). With expertise in bioprocess engineering, regulatory 
-            compliance, and technology transfer, we empower clients to accelerate the development and manufacturing of life-saving 
-            vaccines. Our expertise spans a wide array of viral pathogens, including high-profile examples such as COVID-19, Nipah virus (NiV),
-            and Lassa fever virus (LASV). For COVID-19, we contributed to the rapid development and scale-up of mRNA-based 
-            vaccine candidates, leveraging innovative approaches to meet the urgent global demand. Similarly, our work on NiV and 
-            LASV involved streamlining production processes and overcoming challenges associated with these emerging infectious
-            diseases.</p>
-
-            <h3 id="consultancy" class="main-h3">Consultancy</h3>
-
-            <p class="main-text"> At MDFConsulting, we specialize in pioneering gene therapy solutions for genetic disorders such as ALS, Huntington's
-                disease, and hemophilia B. Our expertise extends to groundbreaking treatments like Glybera, the first approved gene
-                therapy in Europe for familial lipoprotein lipase deficiency. Focused on targeting underlying genetic mutations,
-                our therapies aim to provide tangible improvements in patient outcomes. Whether it's enhancing motor neuron function
-                in ALS, modifying disease progression in Huntington's, or restoring clotting factor production in hemophilia B,
-                we're committed to advancing gene therapy research. Partner with us to translate cutting-edge science into 
-                transformative treatments and improve the lives of patients worldwide. </p>
+            <p>
+                Hello there!
+            </p>
 
 
-            <h3 id="processoptimization" class="main-h3">Process optimization</h3>
-
-            <p class="main-text"> Specializing in the development of therapeutic proteins, we at MDFConsulting leverage cutting-edge techniques to 
-                engineer proteins that address various medical needs. Whether it's designing monoclonal antibodies for cancer therapy,
-                optimizing enzyme replacement therapies for metabolic disorders, or engineering cytokines for immunotherapy, our
-                expertise covers a wide range of therapeutic applications. With a focus on precision and efficacy, we collaborate 
-                closely with clients to navigate the complexities of protein engineering, from target identification and optimization
-                to preclinical testing and regulatory approval. Partner with us to accelerate the development of novel therapeutic
-                proteins and bring innovative treatments to patients in need. </p>
-
-                
-            <h3 id="trainings" class="main-h3"> Trainings</h3>
-
-            <p class="main-text"> Biosimilars represent an innovative approach to expanding access to biologic therapies. At MDFConsulting, we specialize
-                in navigating the complex landscape of biosimilar development. Our expertise encompasses every stage of the process, 
-                from initial comparative analytical studies to regulatory approval. By leveraging our experience and strategic 
-                insights, we help clients optimize development pathways, ensuring that biosimilars meet rigorous standards for safety,
-                efficacy, and quality. Partner with us to capitalize on the opportunities presented by biosimilars and contribute
-                to making high-quality biologic therapies more accessible to patients worldwide. </p>
 
         </div>
 
