--- a/expertises.html
+++ b/expertises.html
@@ -41,7 +41,7 @@
                                 <li><a href="services.html#trainings">- Trainings</a></li>
                             </ul>
                         </li>
-                        <li><a href="index4.html" class="nav-link">Company</a></li>
+                        <li><a href="company.html" class="nav-link">Company</a></li>
                         <li><a href="#" class="nav-link">Contact</a>
                             <ul>
                                 <li><a href="#">Linkedin</a></li>
