added text to services and company

--- a/expertises.html
+++ b/expertises.html
@@ -154,11 +154,11 @@
                     <p class="footer-text"> MDF Consulting is your partner for consult needs in bio informatics.</p>
                 </div>
                 <div class="footer-textbox">
-                    <p class="footer-text"> MDFConsulting</p>
+                    <p class="footer-text"> MDFconsulting Holding B.V.</p>
                     <ul>
                         <li class="footer-text">Boskoop, The Netherlands</li>
-                        <li class="footer-text">+31 6 1234 9876</li>
-                        <li class="footer-text">MDFConsulting@gmail.com</li>
+                        <li class="footer-text">M: +31 6 49376395</li>
+                        <li class="footer-text">info@mdfconsulting.eu</li>
                     </ul>
                 </div>
             </div>         
