--- a/company.html
+++ b/company.html
@@ -101,14 +101,16 @@
 
         <div class="wrapper-main">
 
-            <h2 class="main-h2" style="top: 500px">Our expertises</h2>
+            <h2 class="main-h2" style="top: 500px">Want to work together?</h2>
 
-            <h3 id="company" class="main-h3"> Company </h3>
+            <!-- <h3 id="company" class="main-h3"> Company </h3> -->
 
             <p>
-                Hello there!
+                Partner with MDFConsulting for unmatched expertise and support. Whether 
+                you're a startup or an established firm, we offer personalized solutions 
+                to accelerate your growth and maximize your impact. Let's embark on a
+                 journey of discovery and achievement together.
             </p>
-
 
 
         </div>
@@ -120,11 +122,11 @@
                     <p class="footer-text"> MDF Consulting is your partner for consult needs in bio informatics.</p>
                 </div>
                 <div class="footer-textbox">
-                    <p class="footer-text"> MDFConsulting</p>
+                    <p class="footer-text"> MDFconsulting Holding B.V.</p>
                     <ul>
                         <li class="footer-text">Boskoop, The Netherlands</li>
-                        <li class="footer-text">+31 6 1234 9876</li>
-                        <li class="footer-text">MDFConsulting@gmail.com</li>
+                        <li class="footer-text">M: +31 6 49376395</li>
+                        <li class="footer-text">info@mdfconsulting.eu</li>
                     </ul>
                 </div>
             </div>         
