--- a/services.html
+++ b/services.html
@@ -106,45 +106,50 @@
 
             <h3 id="projectbased" class="main-h3">Project based</h3>
 
-            <p class="main-text">At MDFConsulting we specialize in optimizing and scaling up vaccine production processes to combat infectious diseases 
-            like COVID-19, Nipah virus (NiV), and Lassa fever virus (LASV). With expertise in bioprocess engineering, regulatory 
-            compliance, and technology transfer, we empower clients to accelerate the development and manufacturing of life-saving 
-            vaccines. Our expertise spans a wide array of viral pathogens, including high-profile examples such as COVID-19, Nipah virus (NiV),
-            and Lassa fever virus (LASV). For COVID-19, we contributed to the rapid development and scale-up of mRNA-based 
-            vaccine candidates, leveraging innovative approaches to meet the urgent global demand. Similarly, our work on NiV and 
-            LASV involved streamlining production processes and overcoming challenges associated with these emerging infectious
-            diseases.</p>
+            <p class="main-text">
+                In the dynamic realm of biotechnology, success hinges on agile, targeted support. Our project-based services offer precisely that.
+                From inception to execution, our seasoned team provides tailored assistance for your biotech endeavors. Whether launching a new 
+                drug, refining processes, or conducting trials, we offer strategic guidance and hands-on expertise.
+                Flexible and scalable, our services adapt to your project's needs, whether
+                 short-term solutions or long-term partnerships. Trusted by startups to global players, we accelerate innovation, mitigate risks, and optimize resources.
+                Let's collaborate to propel your biotech ambitions forward. With our project-based support, your success is our mission.</p>
 
             <h3 id="consultancy" class="main-h3">Consultancy</h3>
 
-            <p class="main-text"> At MDFConsulting, we specialize in pioneering gene therapy solutions for genetic disorders such as ALS, Huntington's
-                disease, and hemophilia B. Our expertise extends to groundbreaking treatments like Glybera, the first approved gene
-                therapy in Europe for familial lipoprotein lipase deficiency. Focused on targeting underlying genetic mutations,
-                our therapies aim to provide tangible improvements in patient outcomes. Whether it's enhancing motor neuron function
-                in ALS, modifying disease progression in Huntington's, or restoring clotting factor production in hemophilia B,
-                we're committed to advancing gene therapy research. Partner with us to translate cutting-edge science into 
-                transformative treatments and improve the lives of patients worldwide. </p>
-
+            <p class="main-text"> 
+                Existing projects and processes often hold untapped potential for innovation and optimization.
+                Our consultancy services specialize in unlocking this potential, offering tailored support to elevate your ongoing endeavors.
+                Whether your project requires fine-tuning to enhance efficiency, troubleshooting to overcome challenges, or strategic guidance 
+                to maximize impact, our team of experts is here to help. We work closely with your team to assess current processes, identify areas 
+                for improvement, and implement targeted solutions that drive tangible results.
+                With our collaborative approach and commitment to excellence, we empower your organization to achieve new levels of success in biotechnology.
+                Let's partner together to refine your existing projects and processes, paving the way for breakthroughs in science and technology.
+            </p>
 
             <h3 id="processoptimization" class="main-h3">Process optimization</h3>
 
-            <p class="main-text"> Specializing in the development of therapeutic proteins, we at MDFConsulting leverage cutting-edge techniques to 
-                engineer proteins that address various medical needs. Whether it's designing monoclonal antibodies for cancer therapy,
-                optimizing enzyme replacement therapies for metabolic disorders, or engineering cytokines for immunotherapy, our
-                expertise covers a wide range of therapeutic applications. With a focus on precision and efficacy, we collaborate 
-                closely with clients to navigate the complexities of protein engineering, from target identification and optimization
-                to preclinical testing and regulatory approval. Partner with us to accelerate the development of novel therapeutic
-                proteins and bring innovative treatments to patients in need. </p>
+            <p class="main-text"> 
+                In the fast-paced world of biotechnology, efficiency is paramount. Our process optimization services are designed
+                to streamline your operations, maximize productivity, and drive cost savings.
+                Using a combination of data analysis, industry expertise, and innovative approaches, we identify inefficiencies in your current processes and 
+                develop tailored solutions to address them. Whether it's reducing cycle times, minimizing waste, or improving resource utilization, we work closely with 
+                your team to implement changes that deliver measurable results. With our process optimization services, you'll not only enhance operational 
+                efficiency but also gain a competitive edge in the market. Let us help you unlock the full potential of your processes and propel your organization toward 
+                success in the rapidly evolving biotech industry.
+            </p>
 
                 
             <h3 id="trainings" class="main-h3"> Trainings</h3>
 
-            <p class="main-text"> Biosimilars represent an innovative approach to expanding access to biologic therapies. At MDFConsulting, we specialize
-                in navigating the complex landscape of biosimilar development. Our expertise encompasses every stage of the process, 
-                from initial comparative analytical studies to regulatory approval. By leveraging our experience and strategic 
-                insights, we help clients optimize development pathways, ensuring that biosimilars meet rigorous standards for safety,
-                efficacy, and quality. Partner with us to capitalize on the opportunities presented by biosimilars and contribute
-                to making high-quality biologic therapies more accessible to patients worldwide. </p>
+            <p class="main-text"> 
+                Staying ahead in the field of biotechnology requires continuous learning and adaptation. That's why we offer comprehensive training programs in bioinformatics and career development tailored 
+                to professionals in the industry. Our bioinformatics training equips participants with essential skills in data analysis, computational biology, and genomics. 
+                Through hands-on workshops and interactive sessions led by industry experts, participants gain practical knowledge and techniques to leverage biological data effectively.
+                Additionally, our career-related training programs provide invaluable insights and strategies for navigating the diverse career paths within the biotech sector. 
+                From resume writing and interview preparation to networking and professional development, we empower individuals to advance their careers and thrive in this dynamic field.
+                Whether you're a seasoned professional looking to deepen your expertise in bioinformatics or a newcomer seeking to embark on a career in biotechnology, our training
+                programs offer the guidance and support you need to succeed. Join us in empowering excellence and shaping the future of biotechnology through continuous learning and growth.
+            </p>
 
         </div>
 
