small margin change company page

--- a/company.html
+++ b/company.html
@@ -105,7 +105,7 @@
 
             <!-- <h3 id="company" class="main-h3"> Company </h3> -->
 
-            <p>
+            <p class="main-text" style="margin-top: 120px;">
                 Partner with MDFConsulting for unmatched expertise and support. Whether 
                 you're a startup or an established firm, we offer personalized solutions 
                 to accelerate your growth and maximize your impact. Let's embark on a
