--- a/expertises.html
+++ b/expertises.html
@@ -52,7 +52,7 @@
 
                     <ul class="nav-menu-mobile">
                         <div id="nav-submenu-mobile1" class="nav-submenu-mobile">
-                            <li class="nav-submenu-mobile-li">&nbsp &nbsp &nbsp Expertises  <b>△</b>
+                            <li class="nav-submenu-mobile-li">&nbsp &nbsp &nbsp Expertises
                                 <ul id="nav-submenu-list-mobile1" class="nav-submenu-list-mobile">
                                     <li><a href="expertises.html#viralvaccins">- Viral Vaccines</a></li>
                                     <li><a href="expertises.html#gentherapy">- Gen Therapy</a></li>
