last changes to margins for mobile screens

--- a/expertises.html
+++ b/expertises.html
@@ -103,7 +103,7 @@
 
             <h2 class="main-h2" style="top: 500px">Our expertises</h2>
 
-            <h3 id="viralvaccins" class="main-h3">Viral Vaccin Development</h3>
+            <h3 id="viralvaccins" class="main-h3" style="margin-top: 120px;">Viral Vaccin Development</h3>
 
             <p class="main-text">At MDFConsulting we specialize in optimizing and scaling up vaccine production processes to combat infectious diseases 
             like COVID-19, Nipah virus (NiV), and Lassa fever virus (LASV). With expertise in bioprocess engineering, regulatory 
