--- a/services.html
+++ b/services.html
@@ -104,7 +104,7 @@
             
             <h2 class="main-h2" style="top: 500px">Our services</h2>
 
-            <h3 id="projectbased" class="main-h3">Project based</h3>
+            <h3 id="projectbased" class="main-h3" style="margin-top: 120px;">Project based</h3>
 
             <p class="main-text">
                 In the dynamic realm of biotechnology, success hinges on agile, targeted support. Our project-based services offer precisely that.
