--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
             <h2 class="main-h2">Expertise-driven Biotechnology consulting</h2>
 
-            <h3 class="main-h3"> Welcome to MDFConsulting!</h3>
+            <h3 class="main-h3" style="margin-top: 120px;"> Welcome to MDFConsulting!</h3>
             
             <p> With a deep understanding of the ever-evolving landscape
                 of biotechnology, we offer expert guidance and strategic insights to propel your projects forward.</p>
