--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
                         </li>
                         <li><a href="services.html" class="nav-link">Services</a>
                             <ul>
-                                <li><a href="projectbased.html">- Project Based</a></li>
-                                <li><a href="consultancy.html">- Consultancy</a></li>
-                                <li><a href="procesoptimization.html">- Project Optimization</a></li>
-                                <li><a href="trainings.html">- Trainings</a></li>
+                                <li><a href="services.html#projectbased">- Project Based</a></li>
+                                <li><a href="services.html#consultancy">- Consultancy</a></li>
+                                <li><a href="services.html#procesoptimization">- Project Optimization</a></li>
+                                <li><a href="services.html#trainings">- Trainings</a></li>
                             </ul>
                         </li>
                         <li><a href="company.html" class="nav-link">Company</a></li>
@@ -64,17 +64,17 @@
                         <div id="nav-submenu-mobile2" class="nav-submenu-mobile">
                             <li class="nav-submenu-mobile-li">&nbsp &nbsp &nbsp Services
                                 <ul id="nav-submenu-list-mobile2" class="nav-submenu-list-mobile">
-                                    <li><a href="projectbased.html">- Project Based</a></li>
-                                    <li><a href="consultancy.html">- Consultancy</a></li>
-                                    <li><a href="procesoptimization.html">- Project Optimization</a></li>
-                                    <li><a href="trainings.html">- Trainings</a></li>
+                                    <li><a href="services.html#projectbased">- Project Based</a></li>
+                                    <li><a href="services.html#consultancy">- Consultancy</a></li>
+                                    <li><a href="services.html#procesoptimization">- Project Optimization</a></li>
+                                    <li><a href="services.html#trainings">- Trainings</a></li>
                                 </ul>
                             </li>
                         </div>
                         <div id="nav-submenu-mobile3" class="nav-submenu-mobile">
                             <li class="nav-submenu-mobile-li">&nbsp &nbsp &nbsp Company
                                 <ul id="nav-submenu-list-mobile3" class="nav-submenu-list-mobile">
-                                    <li><a href="x.html">- Placeholder</a></li>
+                                    <li><a href="company.html">- Placeholder</a></li>
                                 </ul>
                             </li>
                         </div>
