--- a/expertises.html
+++ b/expertises.html
@@ -74,7 +74,7 @@
                         <div id="nav-submenu-mobile3" class="nav-submenu-mobile">
                             <li class="nav-submenu-mobile-li">&nbsp &nbsp &nbsp Company
                                 <ul id="nav-submenu-list-mobile3" class="nav-submenu-list-mobile">
-                                    <li><a href="x.html">- Placeholder</a></li>
+                                    <li><a href="company.html">- Placeholder</a></li>
                                 </ul>
                             </li>
                         </div>
