--- a/services.html
+++ b/services.html
@@ -52,7 +52,7 @@
 
                     <ul class="nav-menu-mobile">
                         <div id="nav-submenu-mobile1" class="nav-submenu-mobile">
-                            <li class="nav-submenu-mobile-li">&nbsp &nbsp &nbsp
+                            <li class="nav-submenu-mobile-li">&nbsp &nbsp &nbsp Expertises
                                 <ul id="nav-submenu-list-mobile1" class="nav-submenu-list-mobile">
                                     <li><a href="expertises.html#viralvaccins">- Viral Vaccines</a></li>
                                     <li><a href="expertises.html#gentherapy">- Gen Therapy</a></li>
@@ -74,7 +74,7 @@
                         <div id="nav-submenu-mobile3" class="nav-submenu-mobile">
                             <li class="nav-submenu-mobile-li">&nbsp &nbsp &nbsp Company
                                 <ul id="nav-submenu-list-mobile3" class="nav-submenu-list-mobile">
-                                    <li><a href="x.html">- Placeholder</a></li>
+                                    <li><a href="company.html">- Placeholder</a></li>
                                 </ul>
                             </li>
                         </div>
