--- a/expertises.html
+++ b/expertises.html
@@ -16,7 +16,7 @@
     <body>
 
         <header>
-            <div class="wrapper-header">
+            <div class="wrapper-header" id="navbar">
                 <h1 class="header-h1">
                     <a href="index.html">
                         <img class="logo" src="images/logo.jpg" alt="Logo of MDF Consulting">
@@ -49,7 +49,6 @@
                             </ul>
                         </li>
                     </ul>
-
                     <ul class="nav-menu-mobile">
                         <div id="nav-submenu-mobile1" class="nav-submenu-mobile">
                             <li class="nav-submenu-mobile-li">&nbsp &nbsp &nbsp Expertises
