--- a/services.html
+++ b/services.html
@@ -16,7 +16,7 @@
     <body>
 
         <header>
-            <div class="wrapper-header">
+            <div class="wrapper-header" id="navbar">
                 <h1 class="header-h1">
                     <a href="index.html">
                         <img class="logo" src="images/logo.jpg" alt="Logo of MDF Consulting">
