changed textbox sizes footer

--- a/services.html
+++ b/services.html
@@ -157,7 +157,7 @@
             <div class="wrapper-footer">
                 <div class="footer-textbox">
                     <p class="footer-text"> About us </p>
-                    <p class="footer-text"> MDF Consulting is your partner for consult needs in bio informatics.</p>
+                    <p class="footer-text"> MDFConsulting is your partner for consult needs in bio-technology.</p>
                 </div>
                 <div class="footer-textbox">
                     <p class="footer-text"> MDFConsulting</p>
