--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="keywords" content="HTML, CSS">
         <meta name="description", content="...">
+        <meta name="google-site-verification" content="6EDMRW9Y61kolWzhI5N4TlK7nScOelVc62EoDMrfFxY" />
 
         <title>Wrapper test</title>
 
