--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="keywords" content="HTML, CSS">
-        <meta name="description", content="...">
+        <meta name="description", content="Homepage of MDFConsulting containing information on the consultancy services offered in the biotechnology sector.">
         <meta name="google-site-verification" content="6EDMRW9Y61kolWzhI5N4TlK7nScOelVc62EoDMrfFxY" />
 
-        <title>Wrapper test</title>
+        <title>Home Page - MDFConsulting </title>
 
         <link rel="stylesheet" href="mystyle.css">
 
