added meta title

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <meta name="keywords" content="HTML, CSS">
         <meta name="description", content="Homepage of MDFConsulting containing information on the expert consultancy services offered in the">
         <meta name="google-site-verification" content="6EDMRW9Y61kolWzhI5N4TlK7nScOelVc62EoDMrfFxY" />
+        <meta name="title" MDFConsulting - Expert advise in Biotechnology>
 
         <title>Home Page - MDFConsulting - Expert in Biotechnology </title>
 
