added under construction

--- a/company.html
+++ b/company.html
@@ -101,6 +101,8 @@
 
         <div class="wrapper-main">
 
+            <h2 class="main-h2" style="top: 300px"> Under construction! </h2>
+
             <h2 class="main-h2" style="top: 500px">Want to work together?</h2>
 
             <!-- <h3 id="company" class="main-h3"> Company </h3> -->
@@ -119,7 +121,7 @@
             <div class="wrapper-footer">
                 <div class="footer-textbox">
                     <p class="footer-text"> About us </p>
-                    <p class="footer-text"> MDF Consulting is your partner for consult needs in bio informatics.</p>
+                    <p class="footer-text"> MDF Consulting is your partner for consult needs in biotechnology.</p>
                 </div>
                 <div class="footer-textbox">
                     <p class="footer-text"> MDFconsulting Holding B.V.</p>
