--- a/expertises.html
+++ b/expertises.html
@@ -100,6 +100,9 @@
 
         <div class="wrapper-main">
 
+            <h2 class="main-h2" style="top: 300px"> Under construction! </h2>
+
+
             <h2 class="main-h2" style="top: 500px">Our expertises</h2>
 
             <h3 id="viralvaccins" class="main-h3" style="margin-top: 120px;">Viral Vaccin Development</h3>
@@ -150,7 +153,7 @@
             <div class="wrapper-footer">
                 <div class="footer-textbox">
                     <p class="footer-text"> About us </p>
-                    <p class="footer-text"> MDF Consulting is your partner for consult needs in bio informatics.</p>
+                    <p class="footer-text"> MDF Consulting is your partner for consult needs in biotechnology.</p>
                 </div>
                 <div class="footer-textbox">
                     <p class="footer-text"> MDFconsulting Holding B.V.</p>
