--- a/index.html
+++ b/index.html
@@ -104,6 +104,8 @@
         <div class="wrapper-main">
 
             <h2 class="main-h2">Expertise-driven Biotechnology consulting</h2>
+            
+            <h2 class="main-h2" style="top: 600px"> Under construction! </h2>
 
             <h3 class="main-h3" style="margin-top: 120px;"> Welcome to MDFConsulting!</h3>
             
@@ -135,7 +137,7 @@
             <div class="wrapper-footer">
                 <div class="footer-textbox">
                     <p class="footer-text"> About us </p>
-                    <p class="footer-text"> MDF Consulting is your partner for consult needs in bio informatics.</p>
+                    <p class="footer-text"> MDF Consulting is your partner for consult needs in biotechnology.</p>
                 </div>
                 <div class="footer-textbox">
                     <p class="footer-text"> MDFconsulting Holding B.V.</p>
