--- a/services.html
+++ b/services.html
@@ -101,6 +101,7 @@
 
         <div class="wrapper-main">
 
+            <h2 class="main-h2" style="top: 300px"> Under construction! </h2>
             
             <h2 class="main-h2" style="top: 500px">Our services</h2>
 
@@ -157,7 +158,7 @@
             <div class="wrapper-footer">
                 <div class="footer-textbox">
                     <p class="footer-text"> About us </p>
-                    <p class="footer-text"> MDFConsulting is your partner for consult needs in bio-technology.</p>
+                    <p class="footer-text"> MDFConsulting is your partner for consult needs in biotechnology.</p>
                 </div>
                 <div class="footer-textbox">
                     <p class="footer-text"> MDFconsulting Holding B.V.</p>
