check if works new hrefs

--- a/company.html
+++ b/company.html
@@ -18,14 +18,14 @@
         <header>
             <div class="wrapper-header" id="navbar">
                 <h1 class="header-h1">
-                    <a href="index.html">
+                    <a href="https://mdfconsulting.eu/">
                         <img class="logo" src="images/logo.jpg" alt="Logo of MDF Consulting">
                     </a>
                 </h1>
   
                 <nav class="header-nav">
                     <ul class="nav-menu-desktop">
-                        <li><a href="expertises.html" class="nav-link">Expertises</a>
+                        <li><a href="expertises" class="nav-link">Expertises</a>
                             <ul>
                                 <li><a href="expertises#viralvaccins">- Viral Vaccines</a></li>
                                 <li><a href="expertises#gentherapy">- Gen Therapy</a></li>
